css/style.css
/* reset */
* {
  margin: 0;
  padding: 0;
  font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
}

ul,
li {
  list-style-position: inside;
  font-weight: bold;
  font-size: 30px;
  /* 75% */
  color: #fff
}

a,
p,
span {
  text-decoration: none;
  font-weight: bold;
  font-size: 30px;
  /* 75% */
  color: #fff;
}

body {
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
}

#index {
  background-image: url("../img/background/bg_places.jpg");
}

#places,
#profile {
  background-image: url("../img/background/bg_places.jpg");
}

#people {
  background-image: url("../img/background/bg_people.jpg");
}

.container {
  height: 100%;
  width: 100%;
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0.4);
}

.title {
  margin: 0 auto;
  padding-top: 20%;
  text-align: center;
}

.content {
  overflow: hidden;
  text-align: center;
  margin-left: 10%;
  margin-right: 10%;
  padding-top: 80px;
  /* changed from 100px to 80px */
  padding-bottom: 10%;
  width: 80%;
  height: 100%;
}

#map {
  height: 100%;
  z-index: -1;
}

.bio {
  text-align: left;
  margin-left: 5%;
  margin-right: 5%;
}

.basic_info p {
  font-size: 45px;
  /* 75% */
  margin-top: 40px;
  color: #ffcc33;
}

.description p {
  font-size: 30px;
  /* 75% */
  margin-top: 20px;
  line-height: 37.5px;
  /* 75% */
  color: #ffffff;
}

.bio p {
  font-size: 30px;
  /* 75% */
  margin-top: 20px;
  line-height: 37.5px;
  /* 75% */
  color: #ffffff;
}

.bio a:hover {
  color: rgba(255, 255, 255, 0.6);
}

.skillset p {
  margin-top: 30px;
  /* 75% */
  color: #ffcc33;
}

.skillset span {
  /* 75% */
  line-height: 75px;
  padding: 6px;
  margin-top: 15px;
  margin-right: 3.75px;
  border: solid 6px #fff;
}

.content span {
  /* 75% */
  line-height: 45px;
  /* 75->45px */
  font-size: 30px;
  margin-top: 15px;
  margin-right: 5px;
  border: solid 6px #fff;
  /* dropdown */
  border-radius: 75px;
  padding: 5px 20px;
  display: inline-flex;
}

.content span:hover {
  color: #ffcc33;
  border: solid 6px #ffcc33;
  /* 75% */
}

.description a:hover {
  color: rgba(255, 255, 255, 0.6);
}

.bio span {
  /* 75% */
  line-height: 45px;
  /* 75->45px */
  font-size: 30px;
  margin-top: 15px;
  margin-right: 5px;
  border: solid 6px #fff;
  /* dropdown */
  border-radius: 75px;
  padding: 5px 20px;
  display: inline-flex;
}

.bio span:hover {
  color: #ffcc33;
  border: solid 6px #ffcc33;
  /* 75% */
}

.about {
  /* 75% */
  margin-top: 75px;
  padding-top: 75px;
  padding-left: 5%;
  /* 3.85% -> 5% */
  padding-right: 5%;
  /* 3.85% -> 5% */
  width: 36%;
  /* 15% -> 37% */

  /* not changed */
  position:fixed;
  z-index: 2;
  line-height: 45px;
  font-size: 22.5px;
}

.about p {
  font-size: 30px;
  /* 75% */
  margin-top: 20px;
  line-height: 37.5px;
  /* 75% */
  color: #ffffff;
}

.about a {
  /* 75% */
  line-height: 45px;
  font-size: 22.5px;
  color: #fff;
  display: inline-flexbox;
}

.about a:hover {
  /* 75% */
  color: #ffcc33;
}

.about span {
  /* 75% */
  line-height: 45px;
  /* 75->45px */
  font-size: 30px;
  margin-top: 15px;
  margin-right: 5px;
  border: solid 6px #fff;
  /* dropdown */
  border-radius: 75px;
  padding: 5px 20px;
  display: inline-flex;
}

.about span:hover {
  color: #ffcc33;
  border: solid 6px #ffcc33;
  /* 75% */
}

@media (max-width: 1200px) {
  .about {
    position: static;
    width: 100%;
    padding-left: 5%;
    padding-right: 5%;
    box-sizing: border-box;
  }

  #map {
    position: relative;
    z-index: 1;
  }
}

